<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.cp.hseya.com.cleaner.activity.DashBoardActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_singup_bg"
        android:minHeight="?attr/actionBarSize">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/btn_singup_bg"
        android:orientation="vertical">

        <android.cp.hseya.com.cleaner.ui.CircularImageView
            android:id="@+id/profileImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/defualt_face" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:text="@string/hi"
                android:textSize="20sp"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:paddingLeft="5dp"
                android:textSize="20sp"
                android:id="@+id/profileNameTextView" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:id="@+id/textView4" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/complaint"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"

                android:id="@+id/imageView" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/complaint"
               android:layout_gravity="center"
                android:textSize="15sp"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:background="@drawable/textbox"
                android:id="@+id/textView5" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/inspectionLinearLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/inspection"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/imageView2" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/inspection"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:id="@+id/textView31" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:background="@drawable/textbox"
                android:id="@+id/textView51" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dialogs"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/imageView3" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dialogs"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:id="@+id/textView32" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:background="@drawable/textbox"
                android:id="@+id/textView52" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/notification"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/imageView4" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:id="@+id/textView33" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:background="@drawable/textbox"
                android:id="@+id/textView53" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
